force-app/main/default/objects/AchievementReached__e/AchievementReached__e.object-meta.xml
<CustomObject>
    <description>Fired when user has reached the achievement</description>
    <label>Achievement Reached</label>
    <pluralLabel>Achievements Reached</pluralLabel>
</CustomObject>