force-app/main/default/objects/AchievementReached__e/fields/AchievementId__c.field-meta.xml
<CustomField>
    <fullName>AchievementId__c</fullName>
    <description>Id of a specific Achievement</description>
    <label>Achievement Id</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>